--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "cheerio": "^0.20.0"
   },
   "engines": {
     "node": "6.0.0"
@@ -20,7 +21,7 @@
     "node",
     "bot",
     "packtpub",
-    "ebooks"
+    "free ebooks"
   ],
   "author": "Tuan Pham",
   "contributors": [
