change license and add first pushbullet support

--- a/config.json.template
+++ b/config.json.template
@@ -1,6 +1,10 @@
 {
-    "packtpub" : {
-    	"email" : "",
-    	"password" : ""
-    }
+  "packtpub": {
+    "email": "",
+    "password": ""
+  },
+  "pushbullet": {
+    "enable": true,
+    "apiKey": ""
+  }
 }
