--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "packt-claimer",
-  "version": "0.0.1",
-  "description": "A bot for claim daily free ebooks from packtpub.",
+  "version": "0.1.0",
+  "description": "A bot for claim daily free learning ebooks from packtpub.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -9,15 +9,14 @@
   "dependencies": {
     "request": "^2.72.0",
     "cheerio": "^0.20.0",
-    "pushbullet": "^1.4.3",
-    "node-cron": "^1.1.1"
+    "pushbullet": "^1.4.3"
   },
   "engines": {
     "node": "6.0.0"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/mtuanp/packtpubbot.git"
   },
   "keywords": [
     "node",
@@ -29,5 +28,5 @@
   "contributors": [
     "Tuan Pham"
   ],
-  "license": "CC-BY-4.0"
+  "license": "LGPL-3.0"
 }
