--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "author": "Tuan Pham",
   "contributors": [
-    "Tuan Pham"
+    "Tuan Pham",
+    "Maike Mota"
   ],
   "license": "LGPL-3.0"
 }
