added Stefan as contributors and revert the git clone url in the readme

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "author": "Tuan Pham",
   "contributors": [
     "Tuan Pham",
-    "Maike Mota"
+    "Maike Mota",
+    "Stefan Hauffe"
   ],
   "license": "LGPL-3.0"
 }
